# story_gen

./: .env.example  .gitignore  FIXES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  SCENE_SYSTEM.md  STORY_FOLDERS.md  STRUCTURED_OUTPUT.md  prd.md  pyproject.toml  sample.txt  story_agent.py  test_agents.py
agents/: __init__.py  orchestrator.py  schemas.py
agents/prompts/: __init__.py  beat_sheet_prompts.py  hero_arc_prompts.py
agents/tools/: __init__.py  context_tools.py  validation_tools.py  web_tools.py
session_cache/: context.json
